--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -19,9 +19,7 @@
     <a {% if page.url == "/contact-us/" %}class="active" {% endif %} href="/contact-us/">Contact</a>
   </nav>
   </header>
-  <main>
-    {% block main %}{% endblock %}
-  </main>
+    {% block pagecontent %}{% endblock %}
   <footer>
     <p>
       © {{currentDate.year}}, Decoy Community Primary School
