--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    {% if page.url == "/"}<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{% endif}
+    {% if page.url == "/"%}<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{% endif %}
     <title>Decoy School | {% if title %}{{title}}{% endif %}</title>
     <style>
     {% include "./styles/main.css" %}
