--- a/src/_includes/homepage.njk
+++ b/src/_includes/homepage.njk
@@ -1,11 +1,16 @@
 {% extends "./layout.njk" %}
 
 {% block pagecontent %}
-<main>
-  <h1>{{title}}</h1>
-  {{content | safe}}
+  <main>
+    <h1>Welcome to Decoy Community Primary School</h1>
+    {{content | safe}}
   </main>
   <aside>
-  Twitter etc here
+    <div>
+      <a class="twitter-timeline" data-chrome="transparent nofooter" data-border-color="#008000" data-link-color="#008000" href="https://twitter.com/decoypri" data-height="480">Tweets by @DecoyPri</a>
+      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <div>
+    <a href="https://pmx.parentmail.co.uk/#core/login"><img src="/images/logos/parentmail-logo.svg" alt="parent mail logo">Sign in to Parentmail</a>
+    <a href="https://www.facebook.com/DecoyPTA/"><img src="/images/logos/facebook-logo.svg" alt="parent mail logo">Our PTA on Facebook</a>
   </aside>
 {% endblock %}
