governors grid styling

--- a/src/_includes/homepage.njk
+++ b/src/_includes/homepage.njk
@@ -2,7 +2,7 @@
 
 {% block pagecontent %}
   <main>
-    <h1>Welcome to Decoy Community Primary School</h1>
+    <h1>Decoy Community Primary School</h1>
     {{content | safe}}
   </main>
   <aside>
