--- a/src/_includes/links.njk
+++ b/src/_includes/links.njk
@@ -4,7 +4,7 @@
 <main>
   <h1>{{title}}</h1>
   {{content | safe}}
-  <div class="link-grid">
+  <div class="content-grid">
   {% for link in links %}
   
     <a href="{{link.address}}">{{link.text}}</a>
