--- a/src/_includes/styles/main.css
+++ b/src/_includes/styles/main.css
@@ -55,7 +55,7 @@ html {
 body {
   font-family: "Open Sans", sans-serif;
   color: rgba(0, 0, 0, 0.825);
-  background-color: snow;
+  background-color: ivory;
 }
 
 h1,
@@ -134,31 +134,50 @@ td {
   footer {
     grid-area: footer;
   }
-}
 
-.link-grid {
-  padding: 0;
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  grid-auto-rows: 120px;
-  max-width: 960px;
-  margin: 2em auto 1em auto;
-}
+  .content-grid {
+    padding: 0;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    max-width: 960px;
+    grid-auto-rows: minmax(120px, auto);
+    margin: 2em auto 1em auto;
+  }
 
-.link-grid a {
-  padding: 10px 0.7em;
-  text-decoration: none;
-  display: flex;
-  align-items: flex-end;
-  font-size: 1.3em;
-  list-style: none;
-  background-color: white;
-  border-radius: 2px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s ease;
-}
+  .content-grid a,
+  .content-grid figure {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background-color: white;
+    border-radius: 2px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  }
 
-.link-grid a:hover {
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  .content-grid a {
+    padding: 10px 0.7em;
+    font-size: 1.1em;
+    font-weight: 700;
+    text-decoration: none;
+    transition: all 0.3s ease;
+  }
+
+  .content-grid a:hover {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  }
+
+  .content-grid figure {
+    justify-content: space-between;
+  }
+
+  .content-grid figure img {
+    width: 100%;
+    padding: 0;
+  }
+
+  .content-grid figcaption {
+    padding: 10px 0.7em;
+  }
 }
