--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700|Open+Sans:400,700&display=swap" rel="stylesheet">
     {% if page.url == "/"%}<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{% endif %}
+    <link rel="stylesheet" type="text/css" href="/styles/main.css">
     <title>Decoy School | {% if title %}{{title}}{% endif %}</title>
-    <style>
-    {% include "./styles/main.css" %}
-    </style>
+
   </head>
   <body>
   <div id="page-wrapper">
