--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -37,9 +37,11 @@ caption {
 
 img {
   border: 0;
+  width: 100%;
 }
 
 /* end reset */
+/* ------------------------ */
 
 /* base styles */
 
@@ -53,9 +55,10 @@ html {
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Libre Baskerville", serif;
   color: rgba(0, 0, 0, 0.825);
   background-color: ivory;
+  font-size: 16px;
 }
 
 h1,
@@ -67,11 +70,14 @@ h6,
 p,
 ol,
 ul,
-header nav,
-#map {
-  max-width: 640px;
-  margin-left: auto;
+header nav {
+  max-width: 40em;
   margin-right: auto;
+}
+
+p {
+  line-height: 1.6em;
+  margin-bottom: 1.7em;
 }
 
 h1,
@@ -81,9 +87,16 @@ h4,
 h5,
 h6 {
   font-weight: 700;
+  font-family: "Open Sans", sans-serif;
 }
 
+h1 {
+  font-size: 3em;
+}
+
+/* used for sections in body text */
 h2 {
+  font-size: 1.8em;
   margin-top: 1.5em;
 }
 
@@ -97,7 +110,7 @@ a:hover {
 }
 
 table {
-  max-width: 960px;
+  width: 100%;
   margin: 2em auto 1em auto;
 }
 
@@ -107,10 +120,24 @@ td {
   padding: 10px 0.7em;
 }
 
+#map {
+  width: 100%;
+}
+
 footer {
+  font-family: "Open Sans", sans-serif;
+  margin-top: 2em;
   padding: 1.7em 0 1em 0;
   background-color: rgba(0, 0, 0, 0.825);
   color: white;
+}
+
+footer p {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 footer a {
@@ -121,8 +148,58 @@ footer a:hover {
   color: hsla(120, 100%, 25%, 0.825);
 }
 /* end base styles */
+/* ------------------------ */
+
+/* link buttons and people pictures */
+.content-grid a,
+.content-grid figure {
+  margin: 0;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  background-color: white;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.content-grid a {
+  padding: 10px 0.7em;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.1em;
+  font-weight: 700;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.content-grid a:hover {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.content-grid figure {
+  justify-content: space-between;
+  max-width: 300px;
+}
+
+.content-grid figure img {
+  width: 100%;
+  padding: 0;
+}
+
+.content-grid figcaption {
+  padding: 10px 0.7em;
+}
+/* end link buttons and people pictures */
+/* ------------------------ */
 
 /* layout */
+main {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 /* we need grid fallbacks */
 @supports (display: grid) {
   html,
@@ -146,6 +223,7 @@ footer a:hover {
   header {
     grid-area: header;
   }
+
   #page-content {
     grid-area: content;
   }
@@ -158,43 +236,12 @@ footer a:hover {
     display: grid;
     grid-gap: 18px;
     grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
-    max-width: 960px;
-    grid-auto-rows: minmax(120px, auto);
+    grid-auto-rows: minmax(90px, auto);
     margin: 2em auto 1em auto;
   }
 
   .content-grid a,
   .content-grid figure {
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    background-color: white;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  }
-
-  .content-grid a {
-    padding: 10px 0.7em;
-    font-size: 1.1em;
-    font-weight: 700;
-    text-decoration: none;
-    transition: all 0.3s ease;
-  }
-
-  .content-grid a:hover {
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  }
-
-  .content-grid figure {
-    justify-content: space-between;
-  }
-
-  .content-grid figure img {
-    width: 100%;
-    padding: 0;
-  }
-
-  .content-grid figcaption {
-    padding: 10px 0.7em;
   }
 }
