--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -13,16 +13,19 @@
   <body>
   <div id="page-wrapper">
     <header>
-      <nav>
-      <div id="home-link">
-        <a {% if page.url == "/" %}class="active" {% endif %} href="/">Home</a>
-      </div>
-      <div id="other-links">
-        <a {% if page.url == "/about-us/" %}class="active" {% endif %} href="/about-us/">About Us</a>
-        <a {% if page.url == "/information/" %}class="active" {% endif %} href="/information/">Information</a>
-        <a {% if page.url == "/parents/" %}class="active" {% endif %} href="/parents/">Parents</a>
-        <a {% if page.url == "/contact-us/" %}class="active" {% endif %} href="/contact-us/">Contact</a>
-      </div>
+      <nav id="nav-wide">
+        <div>
+          <a {% if page.url == "/" %}class="active" {% endif %} href="/">Home</a>
+        </div>
+        <div ><a {% if page.url == "/about-us/" %}class="active" {% endif %} href="/about-us/">About Us</a><a {% if page.url == "/information/" %}class="active" {% endif %} href="/information/">Information</a><a {% if page.url == "/parents/" %}class="active" {% endif %} href="/parents/">Parents</a><a {% if page.url == "/contact-us/" %}class="active" {% endif %} href="/contact-us/">Contact</a></div>
+        </nav>
+      <nav id="nav-narrow">
+        <div>
+          <a {% if page.url == "/" %}class="active" {% endif %} href="/">Home</a>
+        </div>
+        <input type="checkbox" id="trigger"/>
+        <label id="hamburger" aria-label="open main navigation" for="trigger"><span></span></label>
+        <div ><a {% if page.url == "/about-us/" %}class="active" {% endif %} href="/about-us/">About Us</a><a {% if page.url == "/information/" %}class="active" {% endif %} href="/information/">Information</a><a {% if page.url == "/parents/" %}class="active" {% endif %} href="/parents/">Parents</a><a {% if page.url == "/contact-us/" %}class="active" {% endif %} href="/contact-us/">Contact</a></div>
       </nav>
     </header>
     <div id="page-content">
