--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -194,7 +194,73 @@ nav a.active:hover {
 }
 
 nav a.active {
-  border-bottom: 1px solid white;
+  border-bottom: 2px solid white;
+}
+
+#nav-wide {
+  display: none;
+}
+#nav-narrow {
+  display: block;
+}
+
+/* hamburger menu styling */
+input#trigger {
+  opacity: 0;
+  width: 0;
+  height: 0;
+  appearance: none;
+  position: fixed;
+}
+
+label#hamburger {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  width: 15px;
+  height: 10px;
+  margin: 40px;
+}
+
+label#hamburger span {
+  display: block;
+  width: 100%;
+  background: white;
+  height: 2px;
+  transition: transform 1s;
+}
+
+label#hamburger span::before,
+label#hamburger span::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  display: block;
+  height: 2px;
+  background: white;
+  transition: 0.4s;
+}
+
+label#hamburger span::before {
+  top: 0;
+}
+
+label#hamburger span::after {
+  top: calc(100% - 2px);
+}
+
+/* hide hamburger menu on wider screens */
+@media screen and (min-width: 640px) {
+  #nav-wide {
+    display: flex;
+  }
+  #nav-narrow {
+    display: none;
+  }
 }
 
 /* end header and nav styling */
