--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -214,11 +214,6 @@ header#nav-narrow {
   background-color: hsl(120, 100%, 25%);
 }
 
-header#nav-narrow nav a.active {
-  text-decoration: underline;
-  font-style: italic;
-}
-
 header#nav-narrow nav a.active:hover {
   border-color: gold;
 }
@@ -237,37 +232,56 @@ header#nav-narrow nav a.active:hover {
   align-items: center;
 }
 
-#menu-toggle-button {
-  width: 30px;
-  height: 30px;
+.menu-button {
+  width: 40px;
+  height: 40px;
   margin: 0 10px;
   background-color: hsl(120, 100%, 25%);
   border: none;
   outline: none;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-#menu-toggle-button.open {
-  background-image: url("/images/logos/close.svg");
-}
-
-#menu-toggle-button.closed {
-  background-image: url("/images/logos/menu.svg");
-}
-
-#narrow-menu-content.closed {
-  display: none;
-}
-
-#narrow-menu-content.open {
-  display: block;
+#narrow-menu-content {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  background-color: hsl(120, 100%, 25%);
+  transition: transform 0.33s;
 }
 
 #narrow-menu-content a {
   display: block;
   text-align: right;
+}
+
+#narrow-menu-content a.active {
+  text-decoration: underline;
+  font-style: italic;
+}
+
+#menu-close-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 3em;
+  height: 3em;
+  align-self: flex-end;
+}
+
+#narrow-menu-content.closed {
+  transform: translateX(100vw);
+}
+
+#narrow-menu-content.open {
+  transform: translateX(0);
 }
 
 /* end header and nav styling */
