--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -4,12 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700|Open+Sans:400,700&display=swap" rel="stylesheet">
+    <!-- netlify cms script from CDN -->
     {% if page.url == "/"%}<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>{% endif %}
     <link rel="stylesheet" type="text/css" href="/styles/main.css">
     <title>Decoy School | {% if title %}{{title}}{% endif %}</title>
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js"></script>    
+  <script>
+    window.addEventListener("load", function(){
+      window.cookieconsent.initialise({
+        palette: {
+          popup: {
+            background: "#ffffff",
+            text: "rgba(0, 0, 0, 0.875)",
+          },
+          button: {
+            background: "#222222",
+            text: "white",
+          },
+        },
+        position: "right",
+        content: {
+          message: "This website uses cookies to ensure the best possible experience.  By using our site, you agree to our use of cookies."
+        }
+      })
+    });
+  </script>
   </head>
   <body>
+  <div id="cookieconsent"></div>
   <div id="page-wrapper">
     <header id="nav-wide">
       <nav>
