refactor of mobile styling - changed heading colour, removed current wide layout

--- a/src/_includes/homepage.njk
+++ b/src/_includes/homepage.njk
@@ -2,7 +2,11 @@
 
 {% block pagecontent %}
   <main>
-    <h1>Decoy Community Primary School</h1>
+    <div id="home-page-banner">
+      <div id="title-container">
+        <h1>Decoy<br />Community<br />Primary<br />School</h1>
+      </div>
+    </div>
     {{content | safe}}
   </main>
   <aside>
