--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -21,7 +21,7 @@
             text: "rgba(0, 0, 0, 0.875)",
           },
           button: {
-            background: "#222222",
+            background: "#008000",
             text: "white",
           },
         },
@@ -39,7 +39,7 @@
     <header id="nav-wide">
       <nav>
         <div>
-          <a {% if page.url == "/" %}class="active" {% endif %} href="/">Decoy Primary School</a>
+          <a {% if page.url == "/" %}class="active" {% endif %} href="/"><img src="/images/logos/school-logo.svg" alt="school logo"/></a>
         </div>
         <div><a {% if page.url == "/about-us/" %}class="active" {% endif %} href="/about-us/">About Us</a><a {% if page.url == "/information/" %}class="active" {% endif %} href="/information/">Information</a><a {% if page.url == "/parents/" %}class="active" {% endif %} href="/parents/">Parents</a><a {% if page.url == "/contact-us/" %}class="active" {% endif %} href="/contact-us/">Contact</a></div>
       </nav>
@@ -47,7 +47,7 @@
     <header id="nav-narrow">  
       <nav>
         <div id="narrow-menu-controls">
-          <a {% if page.url == "/" %}class="active" {% endif %} href="/">Decoy School</a>
+          <a class="school-logo-link" {% if page.url == "/" %}class="active" {% endif %} href="/"><img src="/images/logos/school-logo.svg" alt="school logo"/></a>
           <button id="menu-open-button" class="menu-button" onclick="openMenu()">
             <img src="/images/logos/menu.svg" alt="open site menu"/>
           </button>
